force-app/main/default/objects/Purchase_Orders__c/Purchase_Orders__c.object-meta.xml
<CustomObject>
    <label>Purchase Orders</label>
    <nameField>
        <displayFormat>PO-{0000}</displayFormat>
        <label>Purchase Order #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Purchase Orders</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>