force-app/main/default/objects/Purchase_Orders__c/fields/Account_Address__c.field-meta.xml
<CustomField>
    <fullName>Account_Address__c</fullName>
    <formula>Account_Name__r.ShippingStreet + BR() + 
Account_Name__r.ShippingCity + &quot;, &quot;+ 
Account_Name__r.ShippingState +&quot; &quot; + 
Account_Name__r.ShippingPostalCode + BR() + 
Account_Name__r.ShippingCountry</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Address</label>
    <type>Text</type>
</CustomField>