force-app/main/default/objects/Purchase_Orders__c/fields/Account_Billing_Address__c.field-meta.xml
<CustomField>
    <fullName>Account_Billing_Address__c</fullName>
    <formula>Account_Name__r.BillingStreet + BR() + 
Account_Name__r.BillingCity + &quot;, &quot;+ 
Account_Name__r.BillingState +&quot; &quot; + 
Account_Name__r.BillingPostalCode + BR() + 
Account_Name__r.BillingCountry</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Billing Address</label>
    <type>Text</type>
</CustomField>