force-app/main/default/objects/Purchase_Orders__c/fields/Billing_info_temp__c.field-meta.xml
<CustomField>
    <fullName>Billing_info_temp__c</fullName>
    <formula>Account_Name__r.BillingStreet + &quot;, &quot; +
Account_Name__r.BillingCity + &quot;, &quot;+
Account_Name__r.BillingState +&quot; &quot; +
Account_Name__r.BillingPostalCode + &quot;, &quot; +
Account_Name__r.BillingCountry</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Billing info temp</label>
    <type>Text</type>
</CustomField>