force-app/main/default/objects/Purchase_Orders__c/fields/Count_Purchase_Order_Items__c.field-meta.xml
<CustomField>
    <fullName>Count_Purchase_Order_Items__c</fullName>
    <label>Count Purchase Order Items</label>
    <summaryForeignKey>Purchase_Order_Lines__c.Purchase_Orders__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>