force-app/main/default/objects/Purchase_Orders__c/fields/Discount_Credit__c.field-meta.xml
<CustomField>
    <fullName>Discount_Credit__c</fullName>
    <label>Discount/Credit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>