force-app/main/default/objects/Purchase_Orders__c/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <inlineHelpText>Account Name Email</inlineHelpText>
    <label>Email</label>
    <type>Email</type>
</CustomField>