force-app/main/default/objects/Purchase_Orders__c/fields/Franchise__c.field-meta.xml
<CustomField>
    <fullName>Franchise__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Franchise</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Purchase Orders (Franchise)</relationshipLabel>
    <relationshipName>Purchase_Orders2</relationshipName>
    <type>Lookup</type>
</CustomField>