force-app/main/default/objects/Purchase_Orders__c/fields/Franchise_Add_Template__c.field-meta.xml
<CustomField>
    <fullName>Franchise_Add_Template__c</fullName>
    <formula>Franchise__r.ShippingStreet +&quot;, &quot;+
Franchise__r.ShippingCity + &quot;, &quot;+
Franchise__r.ShippingState +&quot;, &quot; +
Franchise__r.ShippingPostalCode + &quot;, &quot; +
Franchise__r.ShippingCountry</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Franchise Add Template</label>
    <type>Text</type>
</CustomField>