force-app/main/default/objects/Purchase_Orders__c/fields/Franchise_Address__c.field-meta.xml
<CustomField>
    <fullName>Franchise_Address__c</fullName>
    <formula>Franchise__r.ShippingStreet + BR() +
Franchise__r.ShippingCity + &quot;, &quot;+
Franchise__r.ShippingState +&quot; &quot; +
Franchise__r.ShippingPostalCode + BR() +
Franchise__r.ShippingCountry</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Franchise Address</label>
    <type>Text</type>
</CustomField>