force-app/main/default/objects/Purchase_Orders__c/fields/Franchise_Billing_Address__c.field-meta.xml
<CustomField>
    <fullName>Franchise_Billing_Address__c</fullName>
    <formula>Franchise__r.BillingStreet + BR() +
 Franchise__r.BillingCity +&quot; &quot;+
 Franchise__r.BillingState+&quot; &quot;+
 Franchise__r.BillingPostalCode +BR()+
 Franchise__r.BillingCountry</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Franchise Billing Address</label>
    <type>Text</type>
</CustomField>