force-app/main/default/objects/Purchase_Orders__c/fields/Inbound_Purchase_Order__c.field-meta.xml
<CustomField>
    <fullName>Inbound_Purchase_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Inbound Purchase Order</label>
    <referenceTo>Purchase_Orders__c</referenceTo>
    <relationshipLabel>Outbound Purchase Orders</relationshipLabel>
    <relationshipName>Purchase_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>