force-app/main/default/objects/Purchase_Orders__c/fields/Is_Emply_Inbound__c.field-meta.xml
<CustomField>
    <fullName>Is_Emply_Inbound__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Empty Inbound</label>
    <type>Checkbox</type>
</CustomField>