force-app/main/default/objects/Purchase_Orders__c/fields/Order_Paid__c.field-meta.xml
<CustomField>
    <fullName>Order_Paid__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Has the vendor been paid?</inlineHelpText>
    <label>Order Paid</label>
    <type>Checkbox</type>
</CustomField>