force-app/main/default/objects/Purchase_Orders__c/fields/Payment_Terms__c.field-meta.xml
<CustomField>
    <fullName>Payment_Terms__c</fullName>
    <label>Payment Terms</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ACH</fullName>
                <default>true</default>
                <label>ACH</label>
            </value>
            <value>
                <fullName>Net 30</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>