force-app/main/default/objects/Purchase_Orders__c/fields/Shipping_Handling__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Handling__c</fullName>
    <label>Shipping/Handling</label>
    <summarizedField>Purchase_Order_Lines__c.Shipping_Handling__c</summarizedField>
    <summaryForeignKey>Purchase_Order_Lines__c.Purchase_Orders__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>