force-app/main/default/objects/Purchase_Orders__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
                <default>true</default>
                <label>Pending</label>
            </value>
            <value>
                <fullName>Order Created</fullName>
            </value>
            <value>
                <fullName>Order Placed</fullName>
            </value>
            <value>
                <fullName>Order Shipped</fullName>
            </value>
            <value>
                <fullName>Order Completed</fullName>
            </value>
            <value>
                <fullName>Order Cancelled</fullName>
            </value>
            <value>
                <fullName>Invoiced</fullName>
            </value>
            <value>
                <fullName>Back Order</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>