force-app/main/default/objects/Purchase_Orders__c/fields/Subtotal__c.field-meta.xml
<CustomField>
    <fullName>Subtotal__c</fullName>
    <label>Subtotal</label>
    <summarizedField>Purchase_Order_Lines__c.Total_Price_Formula__c</summarizedField>
    <summaryForeignKey>Purchase_Order_Lines__c.Purchase_Orders__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>