force-app/main/default/objects/Purchase_Orders__c/fields/Supplier_Manufacturer__c.field-meta.xml
<CustomField>
    <fullName>Supplier_Manufacturer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Supplier/Manufacturer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Purchase Orders (Supplier/Manufacturer)</relationshipLabel>
    <relationshipName>Purchase_Orders1</relationshipName>
    <type>Lookup</type>
</CustomField>