force-app/main/default/objects/Purchase_Orders__c/fields/Supplier_Name__c.field-meta.xml
<CustomField>
    <fullName>Supplier_Name__c</fullName>
    <formula>Supplier_Manufacturer__r.Name</formula>
    <label>Supplier Name</label>
    <type>Text</type>
</CustomField>