force-app/main/default/objects/Purchase_Orders__c/listViews/All1.listView-meta.xml
<ListView>
    <fullName>All1</fullName>
    <columns>NAME</columns>
    <columns>Account_Name__c</columns>
    <columns>Franchise__c</columns>
    <columns>Supplier_Name__c</columns>
    <columns>Status__c</columns>
    <columns>Type__c</columns>
    <columns>Balance_Due__c</columns>
    <columns>Notes__c</columns>
    <columns>Email__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <sharedTo>
        <allCustomerPortalUsers></allCustomerPortalUsers>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>