force-app/main/default/objects/Purchase_Orders__c/listViews/Inbound_Purchase_Orders.listView-meta.xml
<ListView>
    <fullName>Inbound_Purchase_Orders</fullName>
    <columns>NAME</columns>
    <columns>Account_Name__c</columns>
    <columns>Subtotal__c</columns>
    <columns>Status__c</columns>
    <columns>Email__c</columns>
    <columns>Type__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Type__c</field>
        <operation>equals</operation>
        <value>Inbound</value>
    </filters>
    <label>Inbound Purchase Orders</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
        <group>AllInternalUsers</group>
    </sharedTo>
</ListView>