force-app/main/default/objects/Purchase_Orders__c/listViews/My_Purchase_Orders.listView-meta.xml
<ListView>
    <fullName>My_Purchase_Orders</fullName>
    <columns>NAME</columns>
    <columns>Account_Name__c</columns>
    <columns>Subtotal__c</columns>
    <columns>Status__c</columns>
    <columns>Email__c</columns>
    <columns>Type__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Is_Emply_Inbound__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>My Purchase Orders</label>
</ListView>