force-app/main/default/objects/Purchase_Orders__c/listViews/Outbound_Purchase_Orders.listView-meta.xml
<ListView>
    <fullName>Outbound_Purchase_Orders</fullName>
    <columns>NAME</columns>
    <columns>Account_Name__c</columns>
    <columns>Subtotal__c</columns>
    <columns>Status__c</columns>
    <columns>Email__c</columns>
    <columns>Type__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Type__c</field>
        <operation>equals</operation>
        <value>Outbound</value>
    </filters>
    <label>Outbound Purchase Orders</label>
    <sharedTo>
        <allCustomerPortalUsers></allCustomerPortalUsers>
        <allInternalUsers></allInternalUsers>
        <group>AllInternalUsers</group>
    </sharedTo>
</ListView>